force-app/main/default/objects/saleswings__SW_Tag_Segment_Trigger__c/saleswings__SW_Tag_Segment_Trigger__c.object-meta.xml
<CustomObject>
    <label>SalesWings Tags, Segments and Trigger</label>
    <nameField>
        <displayFormat>STST-{0000000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesWings Tags, Segments and Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>