force-app/main/default/objects/saleswings__SW_Tag_Segment_Trigger__c/fields/saleswings__Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Account_Phone__c</fullName>
    <formula>saleswings__Contact__r.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>