force-app/main/default/objects/saleswings__SW_Tag_Segment_Trigger__c/fields/saleswings__First_Name__c.field-meta.xml
<CustomField>
    <fullName>saleswings__First_Name__c</fullName>
    <formula>IF(saleswings__Contact__c != null, saleswings__Contact__r.FirstName, saleswings__Lead__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>