force-app/main/default/objects/saleswings__SW_Tag_Segment_Trigger__c/fields/saleswings__SW_Tag__c.field-meta.xml
<CustomField>
    <fullName>saleswings__SW_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SW Tag</label>
    <referenceTo>saleswings__SW_Tag__c</referenceTo>
    <relationshipLabel>SalesWings Tags, Segments and Triggers</relationshipLabel>
    <relationshipName>SalesWings_Tags_Segments_and_Triggers1</relationshipName>
    <type>Lookup</type>
</CustomField>