force-app/main/default/objects/saleswings__SW_Tag_Segment_Trigger__c/listViews/saleswings__All.listView-meta.xml
<ListView>
    <fullName>saleswings__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>